--- a/cocomoIntermedio.html
+++ b/cocomoIntermedio.html
@@ -71,6 +71,8 @@
                                          <li class="list-group-item">2. Ввести кількість рядків коду в тисячах (KLDC) та середню ціну за місяць (CPM). Це можна зробити завантаживши <a href="http://www.locmetrics.com/">дану програму</a></li>
                                          <li class="list-group-item">3. Обрати драйвери витрат </li>
                                         <li class="list-group-item"> 4. Обчислити </li>
+                                       <li class="list-group-item">Важливо! Перед початком розрахунку спочатку за необхідності скористайтесь експертною системою. Після закриття експертної системи сторінка буде оновлюватись!</li>
+
                                      </ul>
                                     </div>
                                 </div>
