--- a/cocomoII.html
+++ b/cocomoII.html
@@ -65,10 +65,11 @@
                                         <p>Детальний рівень включає в себе всі характеристики середнього рівня з оцінкою впливу даних характеристик на кожен етап процесу розробки ПЗ.</p>
                                         <h3>Для розрахунку за базовою моделлю потрібно:</h3>
                                      <ul class="list-group list-group-flush" style="color: black">
-                                           <li class="list-group-item">1. Ввести кількість рядків коду в тисячах (KLDC) та середню ціну за місяць (CPM). Це можна зробити завантаживши <a href="http://www.locmetrics.com/">дану програму</a></li>
-                                           <li class="list-group-item"> 2. Обрати драйвери масштабу </li>
-                                             <li class="list-group-item"> 3. Обрати драйвери витрат</li>
+                                        <li class="list-group-item">1. Ввести кількість рядків коду в тисячах (KLDC) та середню ціну за місяць (CPM). Це можна зробити завантаживши <a href="http://www.locmetrics.com/">дану програму</a></li>
+                                        <li class="list-group-item"> 2. Обрати драйвери масштабу </li>
+                                        <li class="list-group-item"> 3. Обрати драйвери витрат</li>
                                         <li class="list-group-item"> 4. Обчислити </li>
+                                        <li class="list-group-item">Важливо! Перед початком розрахунку спочатку за необхідності скористайтесь експертною системою. Після закриття експертної системи сторінка буде оновлюватись!</li>
                                      </ul>
                                     </div>
                                 </div>
