--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 <link href="assets/css/animations.min.css" rel="stylesheet" />
 <!-- CUSTOM CSS -->
 <link href="assets/css/style-green.css" rel="stylesheet" />
-
-
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body data-spy="scroll" data-target="#menu-section">
 <!--MENU SECTION START-->
